--- a/css/style.css
+++ b/css/style.css
@@ -27,25 +27,25 @@
 /* Variables */
 
 :root {
-  --basic-black: #000000;
-  --basic-white: #FFFFFF;
-  --basic-pink: #FB565A;
-  --basic-green: #00CA74;
-  --basic-yellow: #EFC849;
-  --basic-dark-gray: #444444;
-  --basic-gray: #283136;
-  --basic-light-gray: #EEEEEE;
-  --basic-extra-gray: #E1E1E1;
-  --special-gray: #A6A6A6;
-  --special-pink: #E74246;
-  --special-dark-pink: #D7373B;
-  --special-green: #00BC6C;
-  --special-dark-green: #00AA62;
-  --special-yellow: #EAB534;
-  --special-dark-yellow: #E5A722;
-  --special-light-gray: #DFDFDF;
-  --special-dark-light-gray: #D5D5D5;
-  --special-dark-gray: #4D4D4D;
+  --color-black: #000000;
+  --color-white: #FFFFFF;
+  --color-pink-100: #FB565A;
+  --color-pink-200: #E74246;
+  --color-pink-300: #D7373B;
+  --color-green-100: #00CA74;
+  --color-green-200: #00BC6C;
+  --color-green-300: #00AA62;
+  --color-yellow-100: #EFC849;
+  --color-yellow-200: #EAB534;
+  --color-yellow-300: #E5A722;
+  --color-gray-100: #EEEEEE;
+  --color-gray-200: #E1E1E1;
+  --color-gray-300: #DFDFDF;
+  --color-gray-400: #D5D5D5;
+  --color-gray-500: #A6A6A6;
+  --color-gray-600: #4D4D4D;
+  --color-gray-700: #444444;
+  --color-gray-800: #283136;
 }
 
 /* Global */
@@ -56,7 +56,7 @@ body {
   font-family: "Roboto", Arial, sans-serif;
   font-size: 16px;
   line-height: 24px;
-  color: var(--basic-gray);
+  color: var(--color-gray-800);
 }
 
 a {
@@ -74,18 +74,16 @@ img {
   font-size: 16px;
   line-height: 30px;
   font-weight: 500;
-  color: var(--basic-black);
+  color: var(--color-black);
 }
 
 /* может быть будет
 .main-nav-wrapper {
-    background-color: var(--basic-light-gray);
+    background-color: var(--color-gray-100);
 }
 */
 
 .nav-item {
-  font-family: Roboto;
-  font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 30px;
@@ -94,99 +92,144 @@ img {
 
 /*Lists */
 
-.site-nav, .slider-list, .products-list, .features-list, .statistics, .partners-list, .socials-list {
+.site-nav {
   list-style: none;
 }
 
 .site-nav a, .cart-link {
-  color: var(--basic-black);
+  color: var(--color-black);
 }
 
-.site-nav a:hover, .cart-link:hover {
-  color: var(--basic-pink);
+.site-nav a:hover:not(:focus), .cart-link:hover {
+  color: var(--color-pink-100);
 }
 
 .site-nav a:focus, .cart-link:focus {
   opacity: 0.3;
 }
 
-.main-header-logo:focus {
-  background: var(--special-gray);
+.main-header-logo:hover {
+  opacity: 0.7;
 }
 
-.site-nav-current a:not([href]) {
-  color: var(--basic-black);
-  text-decoration: underline;
-  text-decoration-color: var(--basic-pink);
+.main-header-logo:focus {
+  opacity: 0.3;
+}
+
+.site-nav a:not([href]) {
+  color: var(--color-black);
+  position: relative;
+}
+
+.site-nav a:not([href])::after {
+  display: block;
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 2px;
+  background-color: var(--color-pink-100);
+  bottom: -13px;
+}
+
+.slider-list {
+  list-style: none;
 }
 
 .slide-title {
   font-weight: 500;
   font-size: 55px;
   line-height: 55px;
-  color: var(--basic-black);
+  color: var(--color-black);
   text-transform: uppercase;
 }
 
 /* Buttons */
 
 .button {
-  color: var(--basic-white);
-  background-color: var(--basic-pink);
+  color: var(--color-white);
+  background-color: var(--color-pink-100);
   text-transform: uppercase;
-  width: 240px;
-  height: 50px;
+  padding: 17px 40px 15px 40px;
+  border-radius: 3px;
+  display: inline-block;
 }
 
 .button:hover {
-  background-color: var(--special-pink);
+  background-color: var(--color-pink-200);
 }
 
 .button:focus {
-  background-color: var(--special-dark-pink);
+  background-color: var(--color-pink-300);
 }
 
 /* Products */
+
+.products-list {
+  list-style: none;
+}
 
 .products-list h3 {
   font-weight: 700;
   font-size: 24px;
   line-height: 30px;
-  color: var(--basic-black);
+  color: var(--color-black);
   text-transform: uppercase;
 }
 
-.button-item-app {
-  background-color: var(--basic-green);
+.product-item {
+  background-position: top center;
+  background-repeat: no-repeat;
+  width: 300px;
+  padding-top: 146px;
 }
 
-.button-item-app:hover {
-  background-color: var(--special-green);
+.product-item-sites {
+  background-image: url("../img/illustration/illustration-1.png");
 }
 
-.button-item-app:focus {
-  background-color: var(--special-dark-green);
+.product-item-apps {
+  background-image: url("../img/illustration/illustration-2.png");
 }
 
-.button-item-presentation {
-  background-color: var(--basic-yellow);
+.product-item-presentations {
+  background-image: url("../img/illustration/illustration-3.png");
 }
 
-.button-item-presentation:hover {
-  background-color: var(--special-yellow);
+.product-item-apps .button {
+  background-color: var(--color-green-100);
 }
 
-.button-item-presentation:focus {
-  background-color: var(--special-dark-yellow);
+.product-item-apps:hover .button {
+  background-color: var(--color-green-200);
+}
+
+.product-item-apps:focus .button {
+  background-color: var(--color-green-300);
+}
+
+.product-item-presentations .button {
+  background-color: var(--color-yellow-100);
+}
+
+.product-item-presentations .button:hover {
+  background-color: var(--color-yellow-200);
+}
+
+.product-item-presentations .button:focus {
+  background-color: var(--color-yellow-300);
 }
 
 /* Features */
+
+.features-list {
+  list-style: none;
+}
 
 .features-title {
   font-weight: 500;
   font-size: 45px;
   line-height: 45px;
-  color: var(--basic-black);
+  color: var(--color-black);
   text-transform: uppercase;
 }
 
@@ -195,15 +238,19 @@ img {
   text-transform: uppercase;
 }
 
+.statistics {
+  list-style: none;
+}
+
 .stat-title {
   font-weight: 700;
-  color: var(--basic-black);
+  color: var(--color-black);
   text-transform: uppercase;
 }
 
 .stat-subtitle {
   font-weight: 700;
-  color: var(--basic-black);
+  color: var(--color-black);
 }
 
 .stat-subtitle span {
@@ -212,6 +259,10 @@ img {
 }
 
 .partners-list {
+  list-style: none;
+}
+
+.partner-item a {
   opacity: 0.2;
 }
 
@@ -225,8 +276,26 @@ img {
 
 /* Socials */
 
+.socials-list {
+  list-style: none;
+}
+
 .social-item {
   width: 81px;
   height: 81px;
-  background-color: var(--basic-pink);
+  background-color: var(--color-gray-200);
+  display: inline-block;
+  border-radius: 50%;
+}
+
+.social-item:hover {
+  background-color: var(--color-pink-200);
+}
+
+.social-item:focus {
+  background-color: var(--color-pink-300);
+}
+
+.social-item .hidden {
+  display: none;
 }
