--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,9 @@
   --color-gray-200: #E1E1E1;
   --color-gray-300: #DFDFDF;
   --color-gray-400: #D5D5D5;
+  --color-gray-450: #DBDBDB;
   --color-gray-500: #A6A6A6;
+  --color-gray-550: #666666;
   --color-gray-600: #4D4D4D;
   --color-gray-700: #444444;
   --color-gray-800: #283136;
@@ -57,6 +59,10 @@ body {
   font-size: 16px;
   line-height: 24px;
   color: var(--color-gray-800);
+  min-height: 100%;
+  display: grid;
+  grid-template-rows: min-content 1fr min-content;
+  align-content: start;
 }
 
 a {
@@ -71,6 +77,7 @@ img {
 /* Main navigation */
 
 .main-nav {
+  display: grid;
   font-size: 16px;
   line-height: 30px;
   font-weight: 500;
@@ -100,11 +107,12 @@ img {
   color: var(--color-black);
 }
 
-.site-nav a:hover:not(:focus), .cart-link:hover {
+.site-nav a:hover, .cart-link:hover {
   color: var(--color-pink-100);
 }
 
-.site-nav a:focus, .cart-link:focus {
+.site-nav a:active, .cart-link:active {
+  color: var(--color-black);
   opacity: 0.3;
 }
 
@@ -112,16 +120,16 @@ img {
   opacity: 0.7;
 }
 
-.main-header-logo:focus {
+.main-header-logo:active {
   opacity: 0.3;
 }
 
-.site-nav a:not([href]) {
+.nav-item-active a {
   color: var(--color-black);
   position: relative;
 }
 
-.site-nav a:not([href])::after {
+.nav-item-active a::after {
   display: block;
   position: absolute;
   content: "";
@@ -158,7 +166,7 @@ img {
   background-color: var(--color-pink-200);
 }
 
-.button:focus {
+.button:active {
   background-color: var(--color-pink-300);
 }
 
@@ -203,7 +211,7 @@ img {
   background-color: var(--color-green-200);
 }
 
-.product-item-apps:focus .button {
+.product-item-apps:active .button {
   background-color: var(--color-green-300);
 }
 
@@ -215,7 +223,7 @@ img {
   background-color: var(--color-yellow-200);
 }
 
-.product-item-presentations .button:focus {
+.product-item-presentations .button:active {
   background-color: var(--color-yellow-300);
 }
 
@@ -270,7 +278,7 @@ img {
   opacity: 1;
 }
 
-.partner-item a:focus {
+.partner-item a:active {
   opacity: 0.1;
 }
 
@@ -292,10 +300,60 @@ img {
   background-color: var(--color-pink-200);
 }
 
-.social-item:focus {
+.social-item:active {
   background-color: var(--color-pink-300);
 }
 
 .social-item .hidden {
   display: none;
+}
+
+/* Catalog */
+
+.page-main legend, .sorting-title {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 30px;
+  color: var(--color-black);
+  text-transform: uppercase;
+}
+
+.main-filter ul {
+  list-style: none;
+}
+
+/* templates */
+
+.templates-list {
+  list-style: none;
+}
+
+.templates-list h3 {
+  color: var(--color-black);
+  text-transform: uppercase;
+}
+
+/* Pagination */
+
+.pagination-list {
+  list-style: none;
+}
+
+.pagination-item {
+  color: var(--color-black);
+  background-color: var(--color-gray-100);
+  text-transform: uppercase;
+  padding: 17px 20px 15px 20px;
+  display: inline-block;
+}
+
+.pagination-item-current {
+  border: 3px solid var(--color-gray-100);
+  background-color: var(--color-white);
+}
+
+/* Footer */
+
+.contact-title {
+  color: var(--color-black);
 }
