--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,7 @@
   --color-gray-520: #ABABAB;
   --color-gray-550: #666666;
   --color-gray-600: #4D4D4D;
+  --color-gray-hover-600: rgba(77, 77, 77, 0.12);
   --color-gray-700: #444444;
   --color-gray-800: #283136;
   --color-gray-900: #231F20;
@@ -91,7 +92,6 @@ img {
   width: 1200px;
   margin: 0 auto;
   padding: 0 20px;
-  outline: 2px solid violet;
 }
 
 /* Utils */
@@ -121,7 +121,6 @@ img {
   line-height: 30px;
   font-weight: 500;
   color: var(--color-black);
-  outline: 2px solid springgreen;
 }
 
 .nav-item {
@@ -171,7 +170,7 @@ img {
   position: absolute;
   width: 15px;
   height: 15px;
-  right: 100px;
+  left: 5px;
   top: 17px;
   background-image: url("../img/cart-icon.svg");
   background-repeat: no-repeat;
@@ -198,7 +197,7 @@ img {
   width: 100%;
   height: 2px;
   background-color: var(--color-pink-100);
-  bottom: -13px;
+  bottom: -19px;
 }
 
 /* Buttons */
@@ -227,7 +226,6 @@ img {
 .slider {
   position: relative;
   padding-top: 10px;
-  outline: 2px solid tomato;
 }
 
 .slider-list {
@@ -285,7 +283,11 @@ img {
 }
 
 .slide-item button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   padding: 0;
+  margin-bottom: -15px;
   width: 18px;
   height: 18px;
   background-color: var(--color-white);
@@ -295,19 +297,15 @@ img {
   position: relative;
 }
 
-/*
 .slide-item-active button::before {
   content: "";
-  position: absolute;
   padding: 0;
   width: 8px;
   height: 8px;
-  top: 5px;
   background-color: var(--color-white);
   border: 2px solid var(--color-gray-470);
   border-radius: 50%;
 }
-*/
 
 /* Products */
 
@@ -450,7 +448,6 @@ img {
   padding-top: 245px;
   min-width: 360px;
   background: url(../img/illustration/nerds-illustration.png) no-repeat;
-  outline: 2px solid pink;
 }
 
 .statistics {
@@ -460,7 +457,6 @@ img {
   margin-top: 30px;
   padding: 0;
   list-style: none;
-  outline: 2px solid blue;
 }
 
 .stat-title {
@@ -550,7 +546,7 @@ img {
   font-weight: 500;
   font-size: 55px;
   line-height: 55px;
-  padding-top: 72px;
+  padding-top: 68px;
   padding-bottom: 108px;
   text-align: center;
 }
@@ -558,7 +554,12 @@ img {
 .main-catalog-wrapper {
   display: grid;
   grid-template-columns: 1fr 2fr;
-  column-gap: 140px;
+  column-gap: 20px;
+  margin-top: 39px;
+}
+
+.cost-title {
+  padding-top: 13px;
 }
 
 .main-filter {
@@ -578,7 +579,7 @@ img {
 
 .range-controls {
   position: relative;
-  height: 41px;
+  height: 80px;
   margin-bottom: 14px;
   padding-top: 39px;
   padding-right: 20px;
@@ -630,9 +631,10 @@ img {
 }
 
 .price-controls input {
-  width: 64px;
-  padding: 8px;
-  margin-left: 11px;
+  width: 80px;
+  padding: 10px;
+  margin-left: 8px;
+  margin-bottom: 52px;
   text-align: center;
   color: inherit;
   border: none;
@@ -640,6 +642,15 @@ img {
   background-color: var(--color-gray-100);
   font-family: inherit;
   font-size: inherit;
+}
+
+.layout {
+  margin-bottom: 20px;
+}
+
+.filter-advant {
+  padding-top: 100px;
+  margin-bottom: 20px;
 }
 
 .filter-title {
@@ -691,8 +702,8 @@ opacity: 0.3
   position: absolute;
   left: -36px;
   top: 0;
-  width: 19px;
-  height: 19px;
+  width: 23px;
+  height: 23px;
   opacity: 0.4;
   border: 2px solid var(--color-gray-600);
   border-radius: 2px;
@@ -716,8 +727,8 @@ opacity: 0.3
   position: absolute;
   left: -36px;
   top: 0;
-  width: 17px;
-  height: 17px;
+  width: 25px;
+  height: 25px;
   opacity: 0.4;
   border: 4px solid var(--color-gray-600);
   border-radius: 50%;
@@ -815,6 +826,7 @@ opacity: 0.3
   list-style: none;
   padding: 0;
   margin: 0;
+  margin-top: 31px;
   display: grid;
   grid-template-columns: 1fr 1fr;
   column-gap: 40px;
@@ -827,31 +839,63 @@ opacity: 0.3
 }
 
 .template-item {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
   position: relative;
+  border-top: 40px solid var(--color-gray-600);
+  border-radius: 4px;
 }
 
-/*
-.template-item img {
-  width: 359px;
-  min-height: 578px;
-  margin: 0;
-  object-fit: contain;
+.template-item:hover {
+  filter: drop-shadow(0px 6px 15px rgba(0, 0, 0, 0.25));
+  border-top: 40px solid var(--color-gray-hover-600);
+}
 
+.template-item::before {
+  content: "";
+  position: absolute;
+  top: -28px;
+  left: 16px;
+  height: 14px;
+  width: 14px;
+  background-color: var(--color-white);
+  border-radius: 100%;
+  box-shadow: 23px 0 0 0 var(--color-white), 46px 0 0 0 var(--color-white);
+}
+
+.template-item img {
   max-width: 100%;
+  padding-left: 1px;
   height: auto;
   object-fit: contain;
-
-
 }
 
-*/
-
 .template-description {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  width: 360px;
+  min-height: 231px;
+  bottom: 5px;
+  border-radius: 0px 0px 5px 5px;
+  opacity: 0;
   background-color: var(--color-gray-100);
+}
+
+.template-description:hover {
+  opacity: 1;
+}
+
+.template-description:active {
+  opacity: 1;
+}
+
+.template-description p {
+  display: inline-block;
+  text-align: center;
+  margin: 12px 0 32px 0;
 }
 
 /* Pagination */
@@ -862,8 +906,7 @@ opacity: 0.3
   list-style: none;
   padding: 0;
   margin: 0;
-  margin-top: 54px;
-  display: flex;
+  margin-top: 46px;
 }
 
 .pagination-item {
@@ -878,14 +921,14 @@ opacity: 0.3
   color: var(--color-black);
   background-color: var(--color-gray-100);
   text-transform: uppercase;
-  padding: 17px 20px 15px 20px;
+  padding: 14px 17px 14px 17px;
   display: block;
   border-radius: 3px;
   border: 3px solid var(--color-gray-100);
 }
 
 .pagination-item:last-child .pagination-link {
-  padding: 17px 77px 15px 78px;
+  padding: 14px 77px 14px 78px;
 }
 
 .pagination-item-active .pagination-link {
@@ -933,6 +976,11 @@ opacity: 0.3
 .contact-text {
   font-size: 16px;
   line-height: 18px;
+  color: var(--color-gray-550);
+}
+
+.contact-tel {
+  display: inline-block;
   color: var(--color-gray-550);
   margin-bottom: 37px;
 }
