--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,8 @@
 
 :root {
   --color-black: #000000;
+  --color-black-transparent: rgba(0, 0, 0, 0.25);
+  --color-black-light-transparent: rgba(0, 0, 0, 0.4);
   --color-white: #FFFFFF;
   --color-pink-100: #FB565A;
   --color-pink-200: #E74246;
@@ -235,9 +237,10 @@ img {
   position: absolute;
   width: 400px;
   margin-left: -200px;
+  padding: 0;
   justify-content: center;
   left: 50%;
-  bottom: 96px;
+  bottom: 80px;
   z-index: 2;
 }
 
@@ -287,7 +290,6 @@ img {
   justify-content: center;
   align-items: center;
   padding: 0;
-  margin-bottom: -15px;
   width: 18px;
   height: 18px;
   background-color: var(--color-white);
@@ -319,8 +321,8 @@ img {
   margin: 0;
   padding: 0;
   grid-template-columns: 1fr 1fr 1fr;
-  column-gap: 40px;
-  /* Почему 40, а не 100? */
+  column-gap: 100px;
+  padding-right: 60px;
 }
 
 .products-list h3 {
@@ -649,7 +651,7 @@ img {
   font-weight: 700;
   font-size: 18px;
   line-height: 30px;
-  padding-bottom: 16px;
+  margin-bottom: 16px;
   color: var(--color-black);
   text-transform: uppercase;
   outline: 2px solid darkviolet;
@@ -679,16 +681,8 @@ img {
   opacity: 1;
 }
 
-/* Заблокирован
-opacity: 0.3
-*/
-
-.filter-input-checkbox label {
-  padding-top: 3px;
-}
-
-..filter-input-radio label {
-  padding-top: 5px;
+.filter-input[disabled]+label {
+  opacity: 0.3;
 }
 
 .filter-input-checkbox:not(:checked)+label::before {
@@ -745,11 +739,15 @@ opacity: 0.3
   color: var(--color-black);
 }
 
+.filter-title-sorting {
+  margin: 0;
+}
+
 .main-sorting {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  outline: 2px solid teal;
+  outline: 2px solid red;
 }
 
 .main-sorting h2 {
@@ -760,6 +758,7 @@ opacity: 0.3
   text-transform: uppercase;
   list-style: none;
   display: flex;
+  flex-wrap: wrap;
   padding: 0;
   margin: 0;
   outline: 2px solid steelblue;
@@ -782,6 +781,8 @@ opacity: 0.3
 
 .sorting-item {
   opacity: 0.3;
+  font-size: 14px;
+  line-height: 18px;
   color: var(--color-black);
 }
 
@@ -844,10 +845,11 @@ opacity: 0.3
   position: relative;
   border-top: 40px solid var(--color-gray-transparent-600);
   border-radius: 4px;
+  outline: 2px solid plum;
 }
 
 .template-item:hover {
-  filter: drop-shadow(0px 6px 15px rgba(0, 0, 0, 0.25));
+  box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.25);
   border-top: 40px solid var(--color-gray-600);
 }
 
@@ -864,6 +866,7 @@ opacity: 0.3
 }
 
 .template-item img {
+  display: block;
   max-width: 100%;
   padding-left: 1px;
   height: auto;
@@ -877,17 +880,13 @@ opacity: 0.3
   position: absolute;
   width: 360px;
   min-height: 231px;
-  bottom: 5px;
+  bottom: 0;
   border-radius: 0px 0px 5px 5px;
   opacity: 0;
   background-color: var(--color-gray-100);
 }
 
-.template-description:hover {
-  opacity: 1;
-}
-
-.template-description:active {
+.template-item:hover .template-description {
   opacity: 1;
 }
 
@@ -937,6 +936,10 @@ opacity: 0.3
 
 /* Footer */
 
+.main-footer {
+  margin-top: 60px;
+}
+
 .map img {
   width: 100%;
 }
@@ -944,6 +947,7 @@ opacity: 0.3
 .map-wrapper {
   position: relative;
   z-index: 0;
+  padding: 54px 0;
 }
 
 .map {
@@ -960,7 +964,6 @@ opacity: 0.3
   width: 319px;
   text-align: left;
   padding: 47px 50px;
-  margin: 54px 0 54px 0;
   background-color: var(--color-white);
 }
 
@@ -992,7 +995,9 @@ opacity: 0.3
 
 .footer-social {
   display: grid;
-  grid-template-columns: 1fr 2fr;
+  column-gap: 40px;
+  grid-template-columns: repeat(3, 1fr);
+  padding: 68px 20px 76px 20px;
 }
 
 .social-list {
@@ -1050,11 +1055,13 @@ opacity: 0.3
   line-height: 36px;
   color: var(--color-black);
   margin: 0;
+  grid-column: span 2;
 }
 
 .social-text {
   color: var(--color-gray-700);
-  grid-column-start: 2;
+  grid-column: span 2;
+  margin: 0;
 }
 
 /* Modal */
@@ -1082,7 +1089,7 @@ opacity: 0.3
   line-height: 18px;
   color: var(--color-black);
   background-color: var(--color-white);
-  box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.4);
+  box-shadow: 0px 20px 40px var(--color-black-light-transparent);
 }
 
 .modal label {
